// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputSnapshot should render normal TextInput 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ gkCkmo"
    id="id"
    placeholder="placeholder"
    type="password"
  />
</DocumentFragment>
`;

exports[`TextInputSnapshot should render normal TextInput without id 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ gkCkmo"
    placeholder="placeholder"
    type="password"
  />
</DocumentFragment>
`;
